package bank.config;

public interface Connection {

}
