package bank.model;

public enum OperationStatus {
}
