package bank.model;

public enum OperationType {
}
