package bank.model;

public abstract class User {

}
